--- a/package.json
+++ b/package.json
@@ -1,17 +1,23 @@
 {
-  "name": "blogjs",
-  "version": "1.0.0",
-  "description": "FrontCamp blog",
-  "main": "index.js",
-  "dependencies": {
-    "express": "^4.16.3",
-    "nodemon": "^1.17.3",
-    "tern-node-express": "^0.4.0"
-  },
-  "devDependencies": {},
-  "scripts": {
-      "dev": "nodemon"
-  },
-  "author": "",
-  "license": "ISC"
+    "name": "blogjs",
+    "version": "1.0.0",
+    "description": "FrontCamp blog",
+    "main": "index.js",
+    "dependencies": {
+        "express": "^4.16.3",
+        "heroku-cli": "^6.16.13",
+        "nodemon": "^1.17.3",
+        "tern-node-express": "^0.4.0"
+    },
+    "devDependencies": {
+        "body-parser": "^1.18.2",
+        "pug": "^2.0.3",
+        "winston": "^2.4.1"
+    },
+    "scripts": {
+        "start": "node index.js",
+        "dev": "nodemon"
+    },
+    "author": "",
+    "license": "ISC"
 }
