--- a/package.json
+++ b/package.json
@@ -11,12 +11,16 @@
     },
     "devDependencies": {
         "body-parser": "^1.18.2",
+        "express-session": "^1.15.6",
         "mongoose": "^5.0.16",
+        "passport": "^0.4.0",
+        "passport-local": "^1.0.0",
+        "passport-local-mongoose": "^5.0.0",
         "pug": "^2.0.3",
         "winston": "^2.4.1"
     },
     "scripts": {
-        "start": "node index.js",
+        "start": "node app.js",
         "dev": "nodemon"
     },
     "author": "",
